--- a/package.json
+++ b/package.json
@@ -7,23 +7,38 @@
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c --watch"
+    "rollup-build": "rollup -c",
+    "rollup-dev": "rollup -c --watch",
+    "dev": "vite",
+    "start": "vite preview",
+    "build": "vite build"
   },
   "dependencies": {
     "@metamask/providers": "^19.0.0",
+    "@reown/appkit": "^1.6.5",
+    "@reown/appkit-adapter-wagmi": "^1.6.5",
+    "@reown/appkit-wallet-button": "^1.6.5",
+    "@tanstack/react-query": "^5.64.2",
     "ethers": "^6.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "viem": "^2.22.13",
+    "vite": "^6.0.11",
+    "wagmi": "^2.14.9"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@svgr/rollup": "^8.1.0",
+    "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
+    "@vitejs/plugin-react": "^4.3.4",
     "rollup": "^3.20.2",
-    "rollup-plugin-css-only": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
