--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "rollup": "^3.20.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
