--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kazunetakeda25/widget-react",
   "type": "module",
-  "version": "1.0.29",
+  "version": "1.0.32",
   "description": "A component-based SDK for subscription payments",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-wagmi": "^1.6.5",
+    "@reown/appkit-wallet-button": "^1.6.5",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "react": "^19.0.0",
@@ -48,6 +49,8 @@
   "peerDependencies": {
     "@reown/appkit": "^1.6.5",
     "@reown/appkit-adapter-wagmi": "^1.6.5",
+    "@reown/appkit-wallet-button": "^1.6.5",
+    "@tanstack/react-query": "^5.64.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.22.15",
