--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kazunetakeda25/widget-react",
   "type": "module",
-  "version": "1.0.75",
+  "version": "1.0.80",
   "description": "A component-based SDK for subscription payments",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -20,7 +20,9 @@
     "@reown/appkit-adapter-wagmi": "^1.6.5",
     "@reown/appkit-wallet-button": "^1.6.5",
     "@tanstack/react-query": "^5.64.2",
+    "@types/lodash.isequal": "^4.5.8",
     "axios": "^1.7.9",
+    "lodash.isequal": "^4.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-skeleton": "^3.5.0",
