--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@kazunetakeda25/widget-react",
   "type": "module",
-  "version": "1.0.82",
+  "version": "1.0.85",
   "description": "A component-based SDK for subscription payments",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/mtfuji25/widget-react.git"
