update styles, readme, ignore user rejection error, etc

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kazunetakeda25/widget-react",
   "type": "module",
-  "version": "1.0.92",
+  "version": "1.0.93",
   "description": "A component-based SDK for subscription payments",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -33,6 +33,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-url": "^8.0.2",
     "@svgr/rollup": "^8.1.0",
     "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
@@ -44,7 +45,6 @@
     "rollup": "^3.20.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-url": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
